solc_mutator_ossfuzz_seed_corpus/test_sol/test_7f652f80d80a38e53234862d1aa7358f80fea750dd331cd27287cc759bfaddc0_9c7d1cf79129e96afb8e53379f64854c542ba045_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0(bytes12 i0,bytes4 i1) 
{ }
function f1(bool i0,bytes memory i1,address i2,bool i3)  returns(bool o0,bool o1,bytes memory o2)
{
  {

  }
  f0(0x440c9801ff0ba9aa02e33bae,(0x0341b929 & 0x4c20c7ec));
  {

o1 = (7901944836484380650193962028049516650159496447403873411 < 6081174352413144578918179588845132773006436058627902157);

f0(0xbb7b0771478df5242ee3debc,(0x2ba8da0d ^ 0x70ab47f0));
{


}
  }
  i0 = false;
}
// ----
// TypeError 9553: (su0.sol:226-251): Invalid type for argument in function call. Invalid implicit conversion from int_const 33064 to bytes4 requested.
// TypeError 9553: (su0.sol:420-445): Invalid type for argument in function call. Invalid implicit conversion from int_const 1526963709 to bytes4 requested.
